--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-image: url(/img/backgroundtest\ \(1\).jpg);
+  background-image: url(../img/backgroundtest\ \(1\).jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -146,7 +146,7 @@ span {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url(img/Design\ sem\ nome.svg);
+  background-image: url(../img/Design\ sem\ nome.svg);
   width: 100%;
   height: fit-content;
   background-size: cover;
