Erros consertados, só falta os textos

--- a/responsivo.css
+++ b/responsivo.css
@@ -8,6 +8,14 @@ Altura tankavel até: 768px
 
 1272 é o maximo tankavel da largura do background relogio
 */
+@media (max-height: 1000px) {
+.resume .default-img img {
+    max-width: 111%;
+    max-height: 100vh;
+    width: auto;
+    height: auto;
+}
+}
 @media (max-width: 900px) {
   .resume {
     flex-direction: column;
