--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ span {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url(../img/Design\ sem\ nome.svg);
+  background-image: url(./img/Design\ sem\ nome.svg);
   width: 100%;
   height: fit-content;
   background-size: cover;
