--- a/responsivo.css
+++ b/responsivo.css
@@ -21,7 +21,7 @@ Altura tankavel até: 768px
     flex-direction: column;
     align-items: center;
     height: auto;
-    padding: 50px 0px;
+    padding-top: 50px;
   }
 
   .resume-text {
@@ -40,6 +40,7 @@ Altura tankavel até: 768px
   .default-img {
     justify-content: center;
     width: 100%;
+    overflow-x: hidden;
   }
 
   .default-img img {
@@ -196,5 +197,8 @@ Altura tankavel até: 768px
   .aprendizado a,
   .clientes a {
     width: 90%;
+  }
+  .aprendizado {
+    background-image: none;
   }
 }
