--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-image: url(./img/backgroundtest\ \(1\).jpg);
+  background-image: url(./img/backgroundclock.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
